test/expected/prepass_missing.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "nosuchcmd_xyz"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after"]
[Word
  Unquoted "nosuchcmd_xyz"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "after"
]
shit: input/prepass_missing.shit:1:1: error: Program 'nosuchcmd_xyz' wasn't found.
     1 |  nosuchcmd_xyz
       |  ^~~~~~~~~~~~~ here.
after
[Code 0]
